# fbr

./: .gitmodules  Cargo.toml  README.md  sample.json
qdrant/: run.sh
src/: main.rs
viz/: app.py  pyproject.toml
