[package]
name = "fbr"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.93"
finalfusion = "0.18.0"
qdrant-client = { version = "1.12.1", features = ["default", "serde"] }
serde_json = "1.0.133"
tokio = { version = "1", features = ["full"] }
tokio-macros = "2.4.0"
websocket = "0.27.1"
uuid = { version = "1.11.0", features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
] }